--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -62,3 +62,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+main {
+  height: 100%;
+  width: 100%;
+}
