--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,24 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+    display: none;
+  }
+
+html,body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
+}
+
+#root {
+  width: 100%;
+  height: 100%;
+}
